UI issue when Opportunity Name is too long

--- a/src/apps/copilots/src/pages/copilot-opportunity-details/styles.module.scss
+++ b/src/apps/copilots/src/pages/copilot-opportunity-details/styles.module.scss
@@ -15,7 +15,7 @@
     margin-top: $sp-2;
     padding: $sp-6 0;
     color: $teal-100;
-    text-align: center;         
+    text-align: left;
     word-break: break-word;
     line-height: 1.2;         
         
